--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pstakecaretask",
+  "name": "PSTakeCare",
   "version": "1.0.0",
   "description": "Hospital Timings",
   "main": "app.js",
@@ -8,32 +8,18 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ChaudharyChandan/pstakecaretask.git"
+    "url": "git+https://github.com/ChaudharyChandan/pstakecare-task.git"
   },
   "author": "Chandan",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/ChaudharyChandan/pstakecaretask/issues"
+    "url": "https://github.com/ChaudharyChandan/pstakecare-task/issues"
   },
-  "homepage": "https://github.com/ChaudharyChandan/pstakecaretask#readme",
+  "homepage": "https://github.com/ChaudharyChandan/pstakecare-task#readme",
   "dependencies": {
     "ejs": "^2.3.4",
     "express": "^4.13.3",
     "fs": "0.0.2",
     "jsonfile": "^2.2.3"
-  },
-  "devDependencies": {
-    "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-cache": "^0.4.1",
-    "gulp-concat": "^2.6.0",
-    "gulp-imagemin": "^2.4.0",
-    "gulp-livereload": "^3.8.1",
-    "gulp-minify-css": "^1.2.2",
-    "gulp-notify": "^2.2.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-ruby-sass": "^2.0.6",
-    "gulp-uglify": "^1.5.1",
-    "jshint": "^2.8.0"
   }
 }
